--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div style="clear:both;"></div>
                 <div class="contact_info">
-                    <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope" /> +13456764598
+                    <img src="html_finalprojimages/phone.png" alt="https://cdn-icons-png.flaticon.com/128/597/597177.png" /> +13456764598
 
                 </div>
             </div>
