--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <div class="profile_name">
                 Rajan Vishwakarma
                 <div class="contact_info">
-                    <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope" /> jdoe@jeemail.com
+                    <img src="https://icons8.com/icon/124377/circled-envelope" alt="https://icons8.com/icon/124377/circled-envelope" /> jdoe@jeemail.com
                 </div>
                 <div style="clear:both;"></div>
                 <div class="contact_info">
-                    <img src="html_finalprojimages/phone.png" alt="https://cdn-icons-png.flaticon.com/128/597/597177.png" /> +13456764598
+                    <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/> +13456764598
 
                 </div>
             </div>
