--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <div class="profile_name">
                 Rajan Vishwakarma
                 <div class="contact_info">
-                    <img src="https://icons8.com/icon/124377/circled-envelope"/> Rajanv0607@gmail.com
+                    <img src="https://th.bing.com/th/id/OIP.TODrg8JbRbVEcJaWHbeN8gHaHa?w=186&h=186&c=7&r=0&o=5&pid=1.7"/> Rajanv0607@gmail.com
                 </div>
                 <div style="clear:both;"></div>
                 <div class="contact_info">
-                    <img src="https://icons8.com/icon/124377/circled-envelope"> +13456764598
+                    <img src="https://openclipart.org/image/2400px/svg_to_png/185269/phone-icon.png"> +13456764598
 
                 </div>
             </div>
