--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="profile_name">
                 Rajan Vishwakarma
                 <div class="contact_info">
-                    <img src="https://th.bing.com/th/id/OIP.4JUtBLHLfJKTXTHOz08PEQHaHa?w=210&h=211&c=7&r=0&o=5&pid=1.7"/> Rajanv0607@gmail.com
+                    <img src="https://openclipart.org/image/800px/193055"> Rajanv0607@gmail.com
                 </div>
                 <div style="clear:both;"></div>
                 <div class="contact_info">
