--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="project-card">
                 <h3>Social Media App</h3>
                 <ul>
-                    <li>Created a social media app.</li>
+                    <li>Modern College Intraction-2024 Event Website</li>
                     <li>Implemented user authentication, post creation, commenting, and liking functionalities.</li>
                 </ul>
             </div>
