--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
             <hr>
             <div class="project-card">
-                <h3>Social Media App</h3>
+                <h3>Modern College Intraction-2024 Event Website</h3>
                 <ul>
                     <li>Modern College Intraction-2024 Event Website</li>
                     <li>Implemented user authentication, post creation, commenting, and liking functionalities.</li>
