--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             <div class="project-card">
                 <h3>Modern College Intraction-2024 Event Website</h3>
                 <ul>
-                    <li>Modern College Intraction-2024 Event Website</li>
-                    <li>Implemented user authentication, post creation, commenting, and liking functionalities.</li>
+                    <li>Interaction has showcased a diverse range of competitions, including blind coding challenges, poster presentations, gaming tournaments, and more.</li>
+                    <li> Interaction, our primary goal is to cultivate an environment that not only encourages healthy competition but also ignites a passion for technology and innovation.</li>
                 </ul>
             </div>
             <hr>
